src/test/error/import3.lns
fn func() {
   import test.error.Sub5;
   import test.error.Sub6 as FOO;
   
   print( Sub5.Sub5enum.val1.$_txt );
   let test = new FOO.Test();
}

func();

let test = new Sub5.Test(); // error
